# rt-claw

./: .cnb.yml  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  README_zh.md  claw_config.h  claw_config_generated.h.in  meson.build  meson_options.txt
.github/workflows/: build-firmware.yml  ci-build-matrix.yml  ci-nightly.yml  ci-online-integration.yml  ci-qemu-correctness.yml  deploy-pages.yml  sync-cnb.yml
claw/: claw_init.c  meson.build
claw/core/: console.c  driver_core.c  errno.c  gateway.c  heartbeat.c  scheduler.c  service_core.c  tool_core.c
claw/services/ai/: ai_engine.c  ai_memory.c  ai_skill.c
claw/services/im/: feishu.c  telegram.c
claw/services/net/: net_service.c
claw/services/ota/: ota_service.c
claw/services/swarm/: swarm.c
claw/shell/: shell_commands.c  shell_history.c
claw/tools/: claw_tools.c  tool_audio.c  tool_gpio.c  tool_lcd.c  tool_net.c  tool_ota.c  tool_sched.c  tool_system.c
docs/: architecture.md  esp32c3-qemu.md
docs/en/: architecture-review.md  architecture.md  coding-style.md  contributing.md  design.md  esp32c3-qemu.md  getting-started.md  porting.md  rt-claw-intro.md  tuning.md  usage.md  web-tools.md
docs/zh/: architecture-review.md  architecture.md  coding-style.md  contributing.md  design.md  esp32c3-qemu.md  getting-started.md  porting.md  rt-claw-intro.md  tuning.md  usage.md  web-tools.md
drivers/audio/espressif/: es8311_audio.c
drivers/display/espressif/: ssd1306_oled.c
drivers/input/espressif/: usb_hid_mouse.c
drivers/net/espressif/: wifi_manager.c
drivers/serial/espressif/: console.c
include/: claw_board.h  claw_config.h  claw_init.h  claw_net.h  claw_os.h  claw_ota.h  shell_commands.h
include/claw/: claw_init.h
include/claw/core/: class.h  claw_tool.h  console.h  driver.h  errno.h  gateway.h  heartbeat.h  scheduler.h  service.h  tool.h
include/claw/services/ai/: ai_engine.h  ai_memory.h  ai_skill.h
include/claw/services/im/: feishu.h  telegram.h
include/claw/services/ota/: ota_service.h
include/claw/services/swarm/: swarm.h
include/claw/shell/: shell_cmd.h  shell_commands.h  shell_history.h
include/claw/tools/: claw_tools.h
include/core/: claw_service.h  gateway.h  scheduler.h
include/drivers/input/espressif/: usb_hid_mouse.h
include/drivers/net/espressif/: wifi_manager.h
include/osal/: claw_net.h  claw_os.h
include/services/ai/: ai_memory.h  ai_skill.h
include/services/swarm/: swarm.h
include/tools/: claw_tools.h
include/utils/: bitops.h  list.h
osal/: meson.build
osal/freertos/: claw_kv_freertos.c  claw_net_freertos.c  claw_os_freertos.c
osal/include/: claw_os.h
osal/linux/: claw_kv_linux.c  claw_net_linux.c  claw_os_linux.c
osal/rtthread/: SConscript  claw_kv_rtthread.c  claw_net_rtthread.c  claw_os_rtthread.c
platform/common/espressif/: esp_ota.c  esp_shell.c  wifi_board.c
platform/esp32c3/: sdkconfig.defaults  sdkconfig.defaults.demo  sdkconfig.defaults.feishu
platform/esp32c3-qemu/components/rt_claw/: CMakeLists.txt
platform/esp32c3-qemu/main/: main.c
platform/esp32c3/boards/devkit/: sdkconfig.defaults
platform/esp32c3/boards/xiaozhi/: sdkconfig.defaults
platform/esp32c3/boards/xiaozhi-xmini/: board.c  sdkconfig.defaults
platform/esp32c3/components/rt_claw/: CMakeLists.txt  Kconfig  idf_component.yml
platform/esp32c3/main/: CMakeLists.txt  main.c  wifi_manager.c  wifi_manager.h
platform/esp32s3-qemu/components/rt_claw/: CMakeLists.txt
platform/esp32s3-qemu/main/: main.c
platform/esp32s3/boards/default/: sdkconfig.defaults
platform/esp32s3/components/rt_claw/: CMakeLists.txt  Kconfig  rtclaw.lf
platform/esp32s3/main/: main.c
platform/linux/: board.c  main.c  meson.build  ota_stub.c  shell.c
platform/qemu-a9-rtthread/: SConscript  SConstruct
platform/qemu-a9-rtthread/applications/: SConscript  main.c
platform/vexpress-a9/: Kconfig  SConstruct  cross.ini  rtconfig.h
platform/vexpress-a9-qemu/: SConscript
platform/vexpress-a9/drivers/: board.c  drv_smc911x.c  drv_smc911x.h
platform/zynq-a9/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  FreeRTOS_asm_vectors.S  link.ld  main.c  meson.build  shell.c  startup.S  syscalls.c
platform/zynq-a9/boards/qemu/: board.c
platform/zynq-a9/drivers/: NetworkInterface.c  console.c
scripts/: check-patch.sh  gen-esp32c3-cross.py  gen-esp32s3-cross.py  swarm-test.sh
scripts/ci/: install-system-deps.sh  package-esp-firmware.sh  qemu-smoke.sh  setup-esp-idf.sh
src/: SConscript  claw_config.h  claw_init.c  claw_init.h
src/core/: SConscript  gateway.c  gateway.h
src/services/: SConscript
src/services/ai/: SConscript  ai_engine.c  ai_engine.h
src/services/im/: feishu.c
src/services/net/: SConscript  net_service.c  net_service.h
src/services/swarm/: SConscript  swarm.c  swarm.h
src/tools/: claw_tools.c  claw_tools.h  tool_lcd.c  tool_sched.c
tests/functional/: test_ai_online.py  test_boot.py  test_kv_persistence.py  test_linux_boot.py  test_linux_kv.py  test_linux_shell.py  test_linux_signal.py  test_shell.py
tests/functional/rtclaw_test/: __init__.py  cmd.py  linux_testcase.py  platform.py  testcase.py
tests/qemu/: common.sh  run-online.sh
tests/unit/: meson.build  test_ota.c  test_runner.c  test_tools.c
tools/: api-proxy.py  esp32c3-build.sh  esp32c3-flash.sh  esp32c3-qemu-dbg.sh  esp32c3-qemu-run.sh  qemu-dbg.sh  qemu-run.sh  setup-esp-env.sh  sim-run.sh
website/: blog.html  docs.html  index.html
website/blog/: rtthread-qemu-guide.md
