# SPDX-License-Identifier: MIT
# Linux native platform: link claw + osal + cjson → executable

platform_src = files(
    'main.c',
    'shell.c',
    'board.c',
)

thread_dep = dependency('threads')

rtclaw_exe = executable('rtclaw',
    platform_src,
    include_directories: [claw_inc, claw_root_inc],
    c_args: platform_defs,
    dependencies: [rtclaw_dep, osal_dep, cjson_dep, thread_dep],
    install: false,
)
